AMP-30677-Migrate from Ant build to Maven